# jsk_aerial_robot

./: aerial_robot_noetic.rosinstall
aerial_robot_base/launch/external_module/: mocap.launch
aerial_robot_control/include/aerial_robot_control/: flight_navigation.h
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_simulation/gazebo_model/: test.py
aerial_robot_simulation/gazebo_model/model/: barrier_with_plate.sdf
aerial_robot_simulation/gazebo_model/model/barrier_single/: model.config  model.sdf
aerial_robot_simulation/gazebo_model/model/barrier_single_with_2/: model.config  (+1 more)
aerial_robot_simulation/gazebo_model/world/: demo_belt.world  demo_belt_alt.world  empty_swarm.world  simple.world  swarm.world
robots/assemble_quadrotors/config/: FlightControlUnderActuated_tilt_male.yaml  MotorInfo_5inch.yaml
robots/assemble_quadrotors/launch/: bringup.launch
robots/assemble_quadrotors/scripts/: opencv_step1.py
robots/assemble_quadrotors/urdf/: assemble_dual_quadrotors_male.gazebo.xacro
robots/beetle/config/: BeetleControl_sim.yaml
robots/beetle/launch/: bringup.launch  valve_pos.launch
robots/beetle/script/: switch_cmd_pub.py
robots/beetle/src/: beetle_navigation.cpp
robots/beetle/urdf/: beetle.urdf.xacro  valve.urdf  valve_upward.urdf
robots/mini_quadrotor/: CMakeLists.txt  package.xml
robots/mini_quadrotor/launch/: bringup.launch
robots/mini_quadrotor/launch/includes/: sensors.launch.xml
robots/mini_quadrotor/src/: process_pointcloud.cpp
robots/mini_quadrotor/urdf/: robot.urdf.xacro
robots/ninja/urdf/: valve.urdf  valve.xacro
(+30 files in other folders)
